add libinput gitlab

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "badWolf"]
 	path = badWolf
 	url = https://gitlab.com/lanodan/badWolf.git
+[submodule "xf86-input-libinput"]
+	path = xf86-input-libinput
+	url = https://gitlab.com/m2x.dev/arch/packages/extra/xf86-input-libinput.git
